# rwse-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
rwse_checker/: example.py  rwse.py
tests/: test_rwse.py
